2006-08-23  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_types.h:
	- Fix RTL locales (including bug 328053, Hooman "Messi" Mesgary)
	- Remove // comments
	- Remove/comment out some debugging spew. Including some weird
	if block in draw_vline.

2006-08-21  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/glide/src/glide_gtk2_drawing.c: (glide_draw_check):
	* engines/glide/src/glide_gtk2_support.c: (do_glide_draw_check),
	(do_glide_draw_dot), (do_glide_draw_grip):
	* engines/hc/src/hc-style.c: (hc_draw_check), (hc_draw_option):
	* engines/hc/src/hc_gtk2_engine.c: (hc_rc_style_parse),
	(hc_rc_style_merge), (hc_rc_style_init), (hc_style_copy),
	(hc_style_init_from_rc):
	* engines/hc/src/hc_gtk2_engine.h:
	* engines/support/widget-information.c:
	(ge_toggle_get_inconsistent):
	* engines/support/widget-information.h:
	* engines/thinice/src/thinice_theme_draw.c:
	(thinice_style_draw_box):

	- Start Cleanup of thinice
	- Add workaround for cell renderer check/radio till 2.12 style fix
	- Add ge_toggle_get_inconsistent for function

2006-08-21  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:

	Update for 2.7.8 release

2006-08-21  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* engines/smooth/src/engine/smooth_gtk2_misc.c:
	(smooth_reverse_engineer_stepper_box):
	  only query style properties if the widget really is a GtkRange

2006-08-21  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* engines/clearlooks/src/support.c:
	(clearlooks_scrollbar_visible_steppers),
	(clearlooks_scrollbar_get_junction):
	not everything that uses the scrollbar details is a scrollbar

2006-08-21  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (draw_grid_cairo):
	- change the color of the grid slightly
	- speed up the grid by filling all pixel at the same time.
